src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Anniversary_Date__c</fullName>
        <label>Anniversary Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CCI_Contact_Id__c</fullName>
        <externalId>true</externalId>
        <label>CCI Contact Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSE__DS_Company__c</fullName>
        <formula>Account.Name</formula>
        <label>Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSE__DS_Country_ISO_Code__c</fullName>
        <label>Country ISO Code</label>
        <picklist>
            <picklistValues>
                <fullName>AD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DSE__DS_DataScout_Process__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Data Scout: used internally</description>
        <inlineHelpText>Data Scout: used internally</inlineHelpText>
        <label>Data Scout Process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DSE__DS_Legal_Form__c</fullName>
        <formula>Account.DSE__DS_Legal_Form__c</formula>
        <label>Legal Form</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSE__DS_Synchronize__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Data Scout: synchronize Contact data with Bean</description>
        <inlineHelpText>Data Scout: synchronize Contact data with Bean</inlineHelpText>
        <label>Synchronize</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DSE__Domain__c</fullName>
        <description>Demo Edition only</description>
        <inlineHelpText>Demo Edition only</inlineHelpText>
        <label>Domain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <picklist>
            <picklistValues>
                <fullName>Accounts / Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buying</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Creative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H.R.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sponsorship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FInance</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Job_Title__c</fullName>
        <label>Job Title</label>
        <picklist>
            <picklistValues>
                <fullName>Account Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Executive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Associate Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brand Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CEO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chairman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chairman/CEO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Copy Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Franchise Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Graduate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group Press Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Head of Department</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Head of Investment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Head Of Press</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Head of Trading</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR Executive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Executive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media/Press Assistant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media Assistant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P.A.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Marketing_Categories__c</fullName>
        <description>Marketing Categories</description>
        <inlineHelpText>Please choose the Marketing Categories from the list</inlineHelpText>
        <label>Marketing Categories</label>
        <picklist>
            <picklistValues>
                <fullName>Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inserts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inspire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sport</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travel</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Marketing_list__c</fullName>
        <label>Metro marketing</label>
        <picklist>
            <picklistValues>
                <fullName>Client Direct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Creative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Olympics 2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planning / Trading</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research / Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research / Supplier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special Projects</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special Projects / Client Direct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special Projects / Creative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special Projects / Digital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special Projects / Field Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special Projects / PR Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special Projects / Sales Promotion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special Projects / Sponsorship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special Projects / Suppliers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trading Team</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Metro_marketing_level_2__c</fullName>
        <label>Metro marketing - level 2</label>
        <picklist>
            <picklistValues>
                <fullName>Digital / Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital / Creative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital / Supplier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research / Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research / Supplier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research / Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spec Project / Sales Promotion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spec Project / PR Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spec Project / Client Direct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spec Project / Field Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spec Project / Creative And Suppliers</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Migration_reference_no__c</fullName>
        <label>Migration reference no</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ModifiedByRole__c</fullName>
        <formula>LastModifiedBy.UserRole.Name</formula>
        <label>ModifiedByRole</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_for_inactive__c</fullName>
        <label>Reason for inactive</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unsubscribe_department__c</fullName>
        <inlineHelpText>Select department from which the customer does not want to receive marketing material</inlineHelpText>
        <label>Unsubscribe department</label>
        <picklist>
            <picklistValues>
                <fullName>Irish Daily Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>London Classified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail Classified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail Display</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail Online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metro Display</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wowcher</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Visibility__c</fullName>
        <label>Visibility</label>
        <picklist>
            <picklistValues>
                <fullName>Group - read/write</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Group - read only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Department</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <formula>Account.Website</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Website</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pw_cc__MailingAddressStatus__c</fullName>
        <label>Mailing Address Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not checked</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Not matched</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parsed but not found</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ambiguous</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corrected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verified</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pw_cc__MailingCountryLookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mailing Country Lookup</label>
        <referenceTo>pw_cc__CountryObject__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pw_cc__MailingStateLookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mailing State Lookup</label>
        <referenceTo>pw_cc__State__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pw_cc__OtherAddressStatus__c</fullName>
        <label>Other Address Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not checked</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Not matched</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parsed but not found</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ambiguous</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corrected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verified</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>All_Active_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Contacts</label>
    </listViews>
    <listViews>
        <fullName>All_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>Active__c</columns>
        <columns>Job_Title__c</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>Active__c</columns>
        <columns>Job_Title__c</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>Inactive_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Inactive Contacts</label>
    </listViews>
    <listViews>
        <fullName>Marketing_Category_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Marketing_Categories__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Marketing Category Contacts</label>
        <sharedTo>
            <roleAndSubordinates>MailDisplay</roleAndSubordinates>
            <roleAndSubordinates>MailDisplayBusinessDevelopmentManager</roleAndSubordinates>
            <roleAndSubordinates>MailDisplayClientFinanceManager</roleAndSubordinates>
            <roleAndSubordinates>MailDisplayClientFinanceTeam</roleAndSubordinates>
            <roleAndSubordinates>MailDisplayClientHead</roleAndSubordinates>
            <roleAndSubordinates>MailDisplayClientManager</roleAndSubordinates>
            <roleAndSubordinates>MailDisplayClientRetailManager</roleAndSubordinates>
            <roleAndSubordinates>MailDisplayClientRetailTeam</roleAndSubordinates>
            <roleAndSubordinates>MailDisplayClientTeam</roleAndSubordinates>
            <roleAndSubordinates>MailDisplayMagazineStrategyTeam</roleAndSubordinates>
            <roleAndSubordinates>MailDisplayMarketingHead</roleAndSubordinates>
            <roleAndSubordinates>MailDisplayMarketingTeam</roleAndSubordinates>
            <roleAndSubordinates>MailDisplayNewspapersHead</roleAndSubordinates>
            <roleAndSubordinates>MailDisplayNewspapersRegionalTradingManager</roleAndSubordinates>
            <roleAndSubordinates>MailDisplayNewspapersRegionalTradingTeam</roleAndSubordinates>
            <roleAndSubordinates>MailDisplayNewspapersSalesSupportManager</roleAndSubordinates>
            <roleAndSubordinates>MailDisplayNewspapersSalesSupportTeam</roleAndSubordinates>
            <roleAndSubordinates>MailDisplayNewspapersTradingInserts</roleAndSubordinates>
            <roleAndSubordinates>MailDisplayNewspapersTradingInsertsManager</roleAndSubordinates>
            <roleAndSubordinates>MailDisplayNewspapersTradingTeam1</roleAndSubordinates>
            <roleAndSubordinates>MailDisplayNewspapersTradingTeam1Manager</roleAndSubordinates>
            <roleAndSubordinates>MailDisplayNewspapersTradingTeam2</roleAndSubordinates>
            <roleAndSubordinates>MailDisplayNewspapersTradingTeam2Manager</roleAndSubordinates>
            <roleAndSubordinates>MailDisplayNewspapersTradingTeam3</roleAndSubordinates>
            <roleAndSubordinates>MailDisplayNewspapersTradingTeam3Manager</roleAndSubordinates>
            <roleAndSubordinates>MailDisplayOperationsHead</roleAndSubordinates>
            <roleAndSubordinates>MailDisplayOperationsTeam</roleAndSubordinates>
            <roleAndSubordinates>MailDisplayStrategyHead</roleAndSubordinates>
            <roleAndSubordinates>MailDisplayStrategyManager</roleAndSubordinates>
            <roleAndSubordinates>MailDisplayStrategyTeam</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MetroContactsMustHaveMetroMarketingInfo</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>FULL_NAME</columns>
        <columns>Active__c</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Marketing_list__c</columns>
        <columns>Job_Title__c</columns>
        <columns>Department__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Marketing_list__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>MetroContactsMustHaveMetroMarketingInfo</label>
        <sharedTo>
            <group>Admins</group>
            <role>MDMetro</role>
            <role>MetroDisplay</role>
            <role>MetroDisplayFinance</role>
            <role>MetroDisplayFinanceHead</role>
            <role>MetroDisplayMarketing</role>
            <role>MetroDisplayMarketingHead</role>
            <role>MetroDisplayOlympicsHead</role>
            <role>MetroDisplayOlympicsTeam</role>
            <role>MetroDisplayResearch</role>
            <role>MetroDisplayResearchHead</role>
            <role>MetroDisplaySpecialProjects</role>
            <role>MetroDisplaySpecialProjectsHead</role>
            <role>MetroDisplaySponsorshipTeamHead</role>
            <role>MetroDisplayTradingTeam</role>
            <role>MetroGroupBrands</role>
            <role>MetroGroupBrandsManager</role>
            <role>Metro_Display_Creative_Planning_Team</role>
            <role>Metro_Display_Creative_Planning_Team_Head</role>
            <role>Metro_Display_Trading_Team_Head</role>
            <role>Metrocouk_Head</role>
            <role>Metrocouk_Team</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MetroContactsWithNoMarketingInfo</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>FULL_NAME</columns>
        <columns>Active__c</columns>
        <columns>Job_Title__c</columns>
        <columns>Department__c</columns>
        <columns>Marketing_list__c</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Marketing_list__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Migration_reference_no__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>MetroContactsWithNoMarketingInfo</label>
        <sharedTo>
            <group>Admins</group>
            <roleAndSubordinates>MDMetro</roleAndSubordinates>
            <roleAndSubordinates>MetroDisplay</roleAndSubordinates>
            <roleAndSubordinates>MetroDisplayFinance</roleAndSubordinates>
            <roleAndSubordinates>MetroDisplayFinanceHead</roleAndSubordinates>
            <roleAndSubordinates>MetroDisplayMarketing</roleAndSubordinates>
            <roleAndSubordinates>MetroDisplayMarketingHead</roleAndSubordinates>
            <roleAndSubordinates>MetroDisplayOlympicsHead</roleAndSubordinates>
            <roleAndSubordinates>MetroDisplayOlympicsTeam</roleAndSubordinates>
            <roleAndSubordinates>MetroDisplayResearch</roleAndSubordinates>
            <roleAndSubordinates>MetroDisplayResearchHead</roleAndSubordinates>
            <roleAndSubordinates>MetroDisplaySpecialProjects</roleAndSubordinates>
            <roleAndSubordinates>MetroDisplaySpecialProjectsHead</roleAndSubordinates>
            <roleAndSubordinates>MetroDisplaySponsorshipTeamHead</roleAndSubordinates>
            <roleAndSubordinates>MetroDisplayTradingTeam</roleAndSubordinates>
            <roleAndSubordinates>MetroGroupBrands</roleAndSubordinates>
            <roleAndSubordinates>MetroGroupBrandsManager</roleAndSubordinates>
            <roleAndSubordinates>Metro_Display_Creative_Planning_Team</roleAndSubordinates>
            <roleAndSubordinates>Metro_Display_Creative_Planning_Team_Head</roleAndSubordinates>
            <roleAndSubordinates>Metro_Display_Trading_Team_Head</roleAndSubordinates>
            <roleAndSubordinates>Metrocouk_Head</roleAndSubordinates>
            <roleAndSubordinates>Metrocouk_Team</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Metro_Trade_Marketing</fullName>
        <booleanFilter>1</booleanFilter>
        <columns>ACCOUNT.NAME</columns>
        <columns>FULL_NAME</columns>
        <columns>Active__c</columns>
        <columns>Job_Title__c</columns>
        <columns>Marketing_list__c</columns>
        <columns>CONTACT.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Marketing_list__c</field>
            <operation>equals</operation>
        </filters>
        <label>Metro Trade Marketing</label>
        <sharedTo>
            <roleAndSubordinates>MDMetro</roleAndSubordinates>
            <roleAndSubordinates>MetroDisplay</roleAndSubordinates>
            <roleAndSubordinates>MetroDisplayFinance</roleAndSubordinates>
            <roleAndSubordinates>MetroDisplayFinanceHead</roleAndSubordinates>
            <roleAndSubordinates>MetroDisplayMarketing</roleAndSubordinates>
            <roleAndSubordinates>MetroDisplayMarketingHead</roleAndSubordinates>
            <roleAndSubordinates>MetroDisplayOlympicsHead</roleAndSubordinates>
            <roleAndSubordinates>MetroDisplayOlympicsTeam</roleAndSubordinates>
            <roleAndSubordinates>MetroDisplayResearch</roleAndSubordinates>
            <roleAndSubordinates>MetroDisplayResearchHead</roleAndSubordinates>
            <roleAndSubordinates>MetroDisplaySpecialProjects</roleAndSubordinates>
            <roleAndSubordinates>MetroDisplaySpecialProjectsHead</roleAndSubordinates>
            <roleAndSubordinates>MetroDisplaySponsorshipTeamHead</roleAndSubordinates>
            <roleAndSubordinates>MetroDisplayTradingTeam</roleAndSubordinates>
            <roleAndSubordinates>MetroGroupBrands</roleAndSubordinates>
            <roleAndSubordinates>MetroGroupBrandsManager</roleAndSubordinates>
            <roleAndSubordinates>Metro_Display_Creative_Planning_Team</roleAndSubordinates>
            <roleAndSubordinates>Metro_Display_Creative_Planning_Team_Head</roleAndSubordinates>
            <roleAndSubordinates>Metro_Display_Trading_Team_Head</roleAndSubordinates>
            <roleAndSubordinates>Metrocouk_Head</roleAndSubordinates>
            <roleAndSubordinates>Metrocouk_Team</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>Active__c</columns>
        <columns>Job_Title__c</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>Active__c</columns>
        <columns>Job_Title__c</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>CheckMobileFormat</fullName>
        <active>true</active>
        <description>Mobile Field shouldn&apos;t allow text to be added.</description>
        <errorConditionFormula>!REGEX( MobilePhone , &apos;[0-9-()+/ ]*&apos;)
&amp;&amp; !( $Setup.No_Validations__c.Flag__c )</errorConditionFormula>
        <errorDisplayField>MobilePhone</errorDisplayField>
        <errorMessage>Text cannot be added to Mobile field!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CheckPhoneFormat</fullName>
        <active>true</active>
        <description>Phone Field shouldn&apos;t allow text to be added.</description>
        <errorConditionFormula>!REGEX(Phone, &apos;[0-9-()+/ ]*&apos;)
&amp;&amp; !( $Setup.No_Validations__c.Flag__c )</errorConditionFormula>
        <errorDisplayField>Phone</errorDisplayField>
        <errorMessage>Text cannot be added to Phone field!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DepartmentMustBeEntered</fullName>
        <active>true</active>
        <description>If the contact&apos;s department is Finance the contact department must be completed</description>
        <errorConditionFormula>BEGINS( $Profile.Name,&apos;Financial&apos;)
&amp;&amp;  ISBLANK(TEXT( Department__c ))
&amp;&amp; !( $Setup.No_Validations__c.Flag__c)</errorConditionFormula>
        <errorDisplayField>Department</errorDisplayField>
        <errorMessage>Please complete the department</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FinancePhoneNumberMustBeComplete</fullName>
        <active>true</active>
        <description>If the contact&apos;s department is Finance the contact phone number must be completed</description>
        <errorConditionFormula>ISPICKVAL(Department__c , &apos;Accounts / Finance&apos;) 
&amp;&amp; ISBLANK(Phone) 
&amp;&amp; !( $Setup.No_Validations__c.Flag__c )</errorConditionFormula>
        <errorDisplayField>Phone</errorDisplayField>
        <errorMessage>Please complete the phone number</errorMessage>
    </validationRules>
</CustomObject>